<resources>
    <string name="app_name">Google Image Search</string>
    <string name="image_content_description">Image Result</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>

    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_filter_hint">photobucket.com</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search_options_title">Advanced Search Options</string>

    <string-array name="image_sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>

    <string-array name="color_filters">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>

    <string-array name="image_types">
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>
</resources>
